[gd_scene load_steps=8 format=3 uid="uid://c5d7dt4f1vgyl"]

[ext_resource type="Texture2D" uid="uid://bw4xcqxaq08ca" path="res://asset/pop-up/square_resized2.png" id="1_k7d6s"]
[ext_resource type="Script" path="res://gui/tab/script/slot_button.gd" id="2_8aoy7"]
[ext_resource type="Texture2D" uid="uid://m47ui43cgysk" path="res://gui/asset/button_box/UI Design (16).png" id="4_1unhg"]
[ext_resource type="Texture2D" uid="uid://buwf8p2v5t2mf" path="res://gui/asset/button_box/delete_hover.png" id="5_jqegr"]
[ext_resource type="Texture2D" uid="uid://ce0nkel654mqg" path="res://gui/asset/button_box/box.png" id="7_8x5nt"]
[ext_resource type="Theme" uid="uid://bd64i3dx4elpc" path="res://gui/asset/style/main_menu_button.tres" id="8_mx0j0"]

[sub_resource type="ButtonGroup" id="ButtonGroup_miouk"]

[node name="SlotButton" type="TextureButton"]
clip_children = 2
offset_left = 3.0
offset_top = 1.0
offset_right = 226.0
offset_bottom = 148.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_k7d6s")
stretch_mode = 3
script = ExtResource("2_8aoy7")

[node name="SlotImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.996
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 9.0
offset_right = -14.24
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 1

[node name="DeleteButton" type="TextureButton" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -41.0
offset_top = 12.0
offset_right = -13.0
offset_bottom = 38.0
grow_horizontal = 0
mouse_filter = 1
toggle_mode = true
button_group = SubResource("ButtonGroup_miouk")
texture_normal = ExtResource("4_1unhg")
texture_hover = ExtResource("5_jqegr")
ignore_texture_size = true
stretch_mode = 5

[node name="LabelBanner" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 13.0
offset_top = 154.0
offset_right = 314.0
offset_bottom = 192.0
texture = ExtResource("7_8x5nt")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.035
anchor_top = 0.778
anchor_right = 0.962
anchor_bottom = 0.958
offset_left = -14.565
offset_top = -14.388
offset_right = 12.642
offset_bottom = 7.332
theme_override_constants/separation = 10
alignment = 1

[node name="SlotName" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_mx0j0")
theme_override_font_sizes/font_size = 20
text = "Empty Slot"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SlotTime" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("8_mx0j0")
theme_override_font_sizes/font_size = 0
text = "12/10/2023 - 23:10"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
